--- a/classroom_booking/templates/main.html
+++ b/classroom_booking/templates/main.html
@@ -6,15 +6,18 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CLASSROOM BOOKING</title>
 
 </head>
 
 
 <body>
+    {% include 'navbar.html' %}
 
+    {% block content %}
+
+    {% endblock %}
     
-
 </body>
 
 
