--- a/classroom_booking/booking/templates/booking/room_form.html
+++ b/classroom_booking/booking/templates/booking/room_form.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 
-<div>
+<div class="form-container">
+    <h2>Room Form</h2>
     <form method="POST" action="">
         {% csrf_token %}
         {{form.as_p}}
-        <input type="Submit" value="Submit" />
+        <input type="submit" value="Submit" class="btn btn-primary" />
     </form>
 </div>
 
