--- a/classroom_booking/templates/main.html
+++ b/classroom_booking/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+{% load static %}
 <html lang="en">
 
 <head>
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLASSROOM BOOKING</title>
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
 
 </head>
 
@@ -14,9 +15,11 @@
 <body>
     {% include 'navbar.html' %}
 
-    {% block content %}
+    <div class="content-container">
+        {% block content %}
 
     {% endblock %}
+    </div>
     
 </body>
 
