--- a/classroom_booking/templates/navbar.html
+++ b/classroom_booking/templates/navbar.html
@@ -1,5 +1,26 @@
-<a href="/">
-    <h1>HOME</h1>
-</a>
+<nav class="navbar">
+    <div class="logo">
+        <a href="/">HOME</a>
+    </div>
 
-<hr>
+    <div class="search-container">
+        <form method="GET" action="{% url 'home' %}">
+            <input type="text" name="q" placeholder="Search rooms..."/>
+        </form> 
+        <span class="rooms-available-text">{{room_count}} rooms available</span>
+    </div>
+
+    <div class="nav-links">
+        {% if request.user.is_authenticated %}
+            <div class="user-welcome">
+                Welcome, {{ request.user.get_full_name|default:request.user.username }}
+            </div>
+            {% if not request.user.is_superuser %}
+            <a href="{% url 'schedule' %}">My Bookings</a>
+            {% endif %}
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+        {% endif %}
+    </div>
+</nav>
